recyclerview & connect database

--- a/app/src/main/res/layout/activity_dashbord.xml
+++ b/app/src/main/res/layout/activity_dashbord.xml
@@ -39,7 +39,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="80dp"
         android:fontFamily="@font/mregular"
-        android:text="Toko Sempurna 1"
+        android:text=""
         android:textColor="#fff"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/mmedium"
-        android:text="Darto Hartanto"
+        android:text=""
         android:textColor="#fff"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -203,7 +203,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="5dp"
                                 android:fontFamily="@font/mlight"
-                                android:text="9 Oktober 2019"
+                                android:text=""
                                 android:textColor="@color/color5"
                                 android:textSize="14sp" />
 
