--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/xusername"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_kcabang" />
 
     <EditText
-        android:id="@+id/pass"
+        android:id="@+id/xpass"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -92,13 +92,14 @@
         android:background="@drawable/bg_btn3"
         android:fontFamily="@font/mlight"
         android:hint="Password"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColor="@color/color5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username" />
+        app:layout_constraintTop_toBottomOf="@+id/xusername" />
 
     <Button
         android:id="@+id/btn_login"
@@ -112,9 +113,10 @@
         android:paddingBottom="10dp"
         android:text="Login"
         android:textColor="#fff"
+
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass" />
+        app:layout_constraintTop_toBottomOf="@+id/xpass" />
 
 </android.support.constraint.ConstraintLayout>
