--- a/app/src/main/res/layout/item_laporan_uang.xml
+++ b/app/src/main/res/layout/item_laporan_uang.xml
@@ -12,17 +12,19 @@
         android:layout_marginTop="15dp"
         android:orientation="vertical">
         <TextView
+            android:id="@+id/xtgl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/mlight"
-            android:text="9 Oktober 2019"
+            android:text=""
             android:textSize="14sp"
             android:textColor="@color/color5"/>
         <TextView
+            android:id="@+id/xnominal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/mregular"
-            android:text="Rp. 2000.000"
+            android:text=""
             android:textSize="18sp"
             android:layout_marginTop="6dp"
             android:textColor="@color/color4"/>
