--- a/app/src/main/res/layout/dialogview_keuangan.xml
+++ b/app/src/main/res/layout/dialogview_keuangan.xml
@@ -34,17 +34,7 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="90dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/mlight"
-            android:textSize="16sp"
-            android:paddingLeft="8dp"
-            android:text="Rabu"
-            android:textColor="@color/color4"
-            android:background="@drawable/bg_square"/>
-        <TextView
+            android:id="@+id/xtgl"
             android:layout_width="140dp"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
@@ -52,8 +42,18 @@
             android:paddingLeft="8dp"
             android:fontFamily="@font/mlight"
             android:textColor="@color/color4"
-            android:text="8 / 9 / 2019"
+            android:text="19 Oktober 2019"
             android:background="@drawable/bg_square"/>
+
+        <Button
+            android:id="@+id/addtgl"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/icon_calendar"/>
+
+
 
     </LinearLayout>
 
@@ -72,6 +72,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/xnominal"
             android:layout_width="240dp"
             android:layout_height="30dp"
             android:layout_marginRight="10dp"
