--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -36,27 +36,31 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 
-    <Button
+    <ImageView
         android:id="@+id/btn_kcabang"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="232dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/swipekiri"
+        android:src="@drawable/ic_arrow"
+        android:background="@drawable/nav_login_style"
         app:layout_constraintEnd_toStartOf="@+id/btn_owner"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
+    <ImageView
         android:id="@+id/btn_owner"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="232dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/swipekananx"
+        android:src="@drawable/ic_arrow"
+        android:scaleX="-1"
+        android:scaleY="-1"
+        android:background="#C0C0C0"
         app:layout_constraintEnd_toStartOf="@+id/txt_owner"
         app:layout_constraintHorizontal_bias="0.544"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +94,7 @@
         android:background="@drawable/bg_btn3"
         android:fontFamily="@font/mlight"
         android:hint="Password"
+        android:inputType="textPassword"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:textColor="@color/color5"
@@ -100,14 +105,13 @@
 
     <Button
         android:id="@+id/btn_login"
-        android:layout_width="325dp"
-        android:layout_height="60dp"
+        android:layout_width="310dp"
+        android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
         android:layout_marginEnd="8dp"
-        android:background="@drawable/btn_login"
+        android:background="@drawable/btn_login_style"
         android:fontFamily="@font/mregular"
-        android:paddingBottom="10dp"
         android:text="Login"
         android:textColor="#fff"
         android:textSize="20sp"
