add count karyawan for dashboard owner

--- a/app/src/main/res/layout/activity_owner_dashbord.xml
+++ b/app/src/main/res/layout/activity_owner_dashbord.xml
@@ -140,6 +140,7 @@
                                 android:fontFamily="@font/mregular"/>
 
                             <TextView
+                                android:id="@+id/ket_jmlc1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/mlight"
@@ -296,6 +297,7 @@
                                 android:fontFamily="@font/mregular"/>
 
                             <TextView
+                                android:id="@+id/ket_jmlc2"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/mlight"
@@ -449,6 +451,7 @@
                                 android:fontFamily="@font/mregular"/>
 
                             <TextView
+                                android:id="@+id/ket_jmlc3"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/mlight"
